fixed spacing

--- a/src/components/shared/painting-info-template/painting-info-template.module.scss
+++ b/src/components/shared/painting-info-template/painting-info-template.module.scss
@@ -29,6 +29,7 @@
 
 .rightColumn {
   margin-left: 90px;
+  padding-right: 2rem;
 }
 
 .name {
